--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - name: Update gist
-        uses: matchai/waka-box@master
+        uses: jiasm/waka-box@master
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           GIST_ID: 6ea95c9532fd694bce307e42401cc803
